# 4fc52ce0adb1fb52b68e34c1ea6e143976bb6ffd4350a4d408d8a4d9c46680b8

./: .gitignore  INSTALL.md  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  lex.vim
doc/: index.md
fuzzy/: ftest.cpp  fuzzymatcher.h
include/reflex/: abslexer.h  abslexer.hpp  absmatcher.h  accept.hpp  boostmatcher.h  convert.h  debug.h  error.hpp  flexlexer.h  fsm_gen.h  input.h  lexer.h  matcher.h  pattern.h  pattern.hpp  pcre2matcher.h  ranges.hpp  setop.hpp  stdmatcher.h  timer.hpp  utf8.h  utf8.hpp
lib/: Makefile.am  Makefile.in  convert.cpp  debug.cpp  fsm_gen.cpp  input.cpp  lexer.cpp  matcher.cpp  pattern.cpp  unicode.cpp  utf8.cpp
src/: Makefile.in  reflex.cpp  reflex.h
tests/: Makefile.in  btest.cpp  build_test_input  lorem.cpp  ptest.cpp  rtest.cpp  stest.cpp  test_input.cpp  test_input_1.txt  test_input_2.txt  test_ranges.cpp
vs/: example.l
